# nomnomcli

./: .gitignore  .task-brief.md  AGENTS.md  MANIFEST.in  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  plans.md  status.md  test-plan.md
evals/: __init__.py  corpus.json  fake_actor.py  generate_corpus.py  run.py
evals/baseline/: practical-branded-fallback-red.txt
nomnomcli/: __init__.py  __main__.py  _snapshot_helper.py  accuracy.py  agent.py  cli.py  config.py  db.py  errors.py  foods.py  models.py  off.py  onboarding.py  parser.py  portions.py  providers.py  recipes.py  semantic.py  usda.py
nomnomcli/data/: __init__.py  foods.sqlite  piece_weights.json  synonyms_ru.json
scripts/: build_mini_db.py  food_overrides.json  synonym_foods.json
skill/: SKILL.md
tests/: conftest.py  test_accuracy_profiles.py  test_agent_intake.py  test_capture.py  test_cli.py  test_config.py  test_data_quality.py  test_db.py  test_evals.py  test_foods.py  test_install.py  test_off.py  test_parser.py  test_portions.py  test_recipes.py  test_sdist.py  test_semantic.py  test_semantic_resolution.py  test_usda.py
tests/fixtures/: foods.json  recipe.html  semantic_resolution_cases.json
